# TACC

./: README.md
hw02/: README.md  add.sh  factorial.sh  launcher.slurm  nohup.out  paramlist  pi  pi.cpp  pi.sh  pi_micro  pi_microsecond.cpp  pibatch1.sh  pibatch2.sh  pibatch2_micro.sh  pibatch3.sh  test.sh  tri.sh
hw03/: README.md  integrate  main.cpp
hw03/integration/: Makefile  func.cpp  func.h  fx.cpp  fx.h  integrate  integration.sh  integration.txt  main.cpp  plot_error.m  plot_error.m~  simpson.cpp  simpson.h  trapezoid.cpp  trapezoid.h
hw03/make/: Makefile  tardis
hw04/: main.tex
proj01/: Makefile  README.md  command.sh  configure.ac  main.c
proj01/model_document/: main.tex
proj01/src/: Makefile.am  batch.sh  build_linear_system.c  command.sh  conv_1d_2nd.txt  conv_1d_4th.txt  conv_2d_4th.txt  error_norm.c  function.h  gauss.c  init.c  input.1d.2nd.gauss  input.1d.4th.gauss  input.2d.2nd.gauss  input.2d.4th.gauss  jacobi.c  main.c  matrix.h  output.c  parameter.h  parse_input.c  solve_system.c
proj01/src/conv_rate_record/: conv_2d_jacobi.txt
proj01/test/: Makefile.am  check_error.c  input.1d.2nd.gauss  input.1d.2nd.jacobi  input.1d.4th.gauss  input.2d.2nd.gauss  input.2d.2nd.jacobi  input.2d.4th.gauss  ref.txt  rgn.bats  rgn.sh  rng.bats  rng.sh
proj02/: Makefile.am  batch_time.sh  build_coverage.sh  build_petsc.sh  command.sh  configure.ac  heat_plot2d.m  time.input  time_record.m
proj02/coverage/lcov/: index-sort-f.html  index-sort-l.html  index.html  lcov.info
proj02/coverage/lcov/src/: build_linear_system.c.func-sort-c.html  build_linear_system.c.func.html  build_linear_system.c.gcov.html  error_norm.c.func-sort-c.html  error_norm.c.func.html  error_norm.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  init.c.func-sort-c.html  init.c.func.html  init.c.gcov.html  main.c.func-sort-c.html  main.c.func.html  main.c.gcov.html  output.c.func-sort-c.html  output.c.func.html  output.c.gcov.html  parse_input.c.func-sort-c.html  parse_input.c.func.html  parse_input.c.gcov.html  solve_system.c.func-sort-c.html  solve_system.c.func.html  solve_system.c.gcov.html
proj02/document/: main.tex
proj02/src/: Makefile.am  batch_time.sh  error_norm.c  function.h  init.c  input.1d.2nd.gauss  input.1d.2nd.gmres  input.1d.2nd.jacobi  input.1d.4th.gauss  input.1d.4th.gmres  input.2d.2nd.gauss  input.2d.2nd.gmres  input.2d.2nd.jacobi  input.2d.4th.gauss  input.2d.4th.gmres  main.c  output.c  parameter.h  parse_input.c  run.sh  solve_system.c
proj02/src/conv_rate_record/: conv_1d_2nd.txt  conv_1d_jacobi.txt  conv_2d_2nd.txt
proj02/src/time_record/: record_1D_gauss.txt  record_1D_gmres.txt  record_1D_jacobi.txt  record_2D_gauss.txt  record_2D_gmres.txt  record_2D_jacobi.txt
proj02/test/: Makefile.am  input.1d.2nd.gmres  input.1d.2nd.jacobi  input.1d.4th.gauss  input.1d.4th.gmres  input.2d.2nd.gauss  input.2d.2nd.gmres  input.2d.4th.gmres  ref_1d_2nd_gauss.h5  ref_1d_2nd_gmres.h5  ref_1d_2nd_jacobi.h5  ref_1d_4th_gauss.h5  ref_1d_4th_gmres.h5  ref_2d.txt  ref_2d_2nd_gauss.h5  ref_2d_2nd_gmres.h5  ref_2d_2nd_jacobi.h5  ref_2d_4th_gauss.h5  ref_2d_4th_gmres.h5  rng.sh  solver_existence.sh  test_1d_2nd_gauss.sh  test_1d_2nd_gmres.sh  test_1d_2nd_jacobi.sh  test_1d_4th_gauss.sh  test_1d_4th_gmres.sh  test_2d_2nd_gauss.sh  test_2d_2nd_gmres.sh  test_2d_2nd_jacobi.sh  test_2d_4th_gauss.sh  test_2d_4th_gmres.sh
proj02/time_record/: record_1D_gauss.txt  record_1D_gmres  record_1D_jacobi.txt  record_2D_gauss.txt  record_2D_gmres  record_2D_jacobi
