AUTOMAKE_OPTIONS = foreign

# Define executable to create
bin_PROGRAMS = solver

# Define source code files which are part of the executable
solver_SOURCES = main.c build_linear_system.c function.h matrix.h parse_input.c error_norm.c init.c output.c solve_system.c

# library linkage
AM_CFLAGS = 
LIBS      = 
