TESTS       = solver_existence.sh
TESTS      += test_1d_2nd_gauss.sh test_1d_4th_gauss.sh test_2d_2nd_gauss.sh test_2d_4th_gauss.sh
TESTS      += test_1d_2nd_jacobi.sh test_2d_2nd_jacobi.sh

if PETSC_ENABLED
TESTS	   += test_1d_2nd_gmres.sh test_1d_4th_gmres.sh test_2d_2nd_gmres.sh test_2d_4th_gmres.sh
endif

CLEANFILES  = sol.dat
